--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "firebase": "^10.12.5",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
